update popup positioning to fixed for improved viewport alignment

--- a/data/style.css
+++ b/data/style.css
@@ -307,7 +307,7 @@ tr:nth-child(odd) {
 /* Popup */
 .popup {
     display: none;
-    position: absolute;
+    position: fixed; /* Fixiert das Popup relativ zum Viewport */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -322,7 +322,9 @@ tr:nth-child(odd) {
 }
 
 .popup-container {
-    position: relative;
+    position: fixed; /* Fixiert den Container relativ zum Viewport */
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
